update, criação de envio de informação pro header
