# grpcservice/app/server/server.go
@@ -14,34 +14,44 @@ import (
 	"connectrpc.com/validate"
 	"connectrpc.com/vanguard"
 	"github.com/gin-gonic/gin"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 type ProductService struct{}
 
-func (srv *ProductService) CreateProduct(ctx context.Context, req *services.CreateProductRequest) (*services.CreateProductResponse, error) {
+func (srv *ProductService) CreateProduct(ctx context.Context, reqWrapper *connect.Request[services.CreateProductRequest]) (*connect.Response[services.CreateProductResponse], error) {
 	resp := &services.CreateProductResponse{}
+
+	req := reqWrapper.Msg
 	resp.SetProduct(req.GetProduct())
 	msg := strings.Builder{}
 	msg.WriteString("Product with name: " + req.GetProduct().GetName() + " has been created")
 
 	resp.SetMsg(msg.String())
 
-	return resp, nil
+	return connect.NewResponse(resp), nil
 }
 
-func (srv *ProductService) GetProduct(ctx context.Context, req *services.GetProductRequest) (*services.GetProductResponse, error) {
+func (srv *ProductService) GetProduct(ctx context.Context, reqWrapper *connect.Request[services.GetProductRequest]) (*connect.Response[services.GetProductResponse], error) {
 
-	return &services.GetProductResponse{}, nil
+	return connect.NewResponse(&services.GetProductResponse{}), nil
 }
 
-func (srv *ProductService) UpdateProduct(ctx context.Context, req *services.UpdateProductRequest) (*services.UpdateProductResponse, error) {
+func (srv *ProductService) GetProducts(ctx context.Context, req *connect.Request[emptypb.Empty]) (*connect.Response[services.GetProductsResponse], error) {
+	// get header
+	fmt.Printf("X-User-ID: %s\n", req.Header().Get("X-User-ID"))
 
-	return &services.UpdateProductResponse{}, nil
+	return connect.NewResponse(&services.GetProductsResponse{}), nil
 }
 
-func (srv *ProductService) DeleteProduct(ctx context.Context, req *services.DeleteProductRequest) (*services.DeleteProductResponse, error) {
+func (srv *ProductService) UpdateProduct(ctx context.Context, reqWrapper *connect.Request[services.UpdateProductRequest]) (*connect.Response[services.UpdateProductResponse], error) {
 
-	return &services.DeleteProductResponse{}, nil
+	return connect.NewResponse(&services.UpdateProductResponse{}), nil
+}
+
+func (srv *ProductService) DeleteProduct(ctx context.Context, reqWrapper *connect.Request[services.DeleteProductRequest]) (*connect.Response[services.DeleteProductResponse], error) {
+
+	return connect.NewResponse(&services.DeleteProductResponse{}), nil
 }
 
 func globalsMiddleware(g *gin.Engine) {
